<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_general"
    android:focusableInTouchMode="true"
    android:padding="@dimen/padding"
    tools:context=".PregameActivity">

    <!--The clear and setting buttons-->
    <ImageButton
        android:id="@+id/SettingsButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/button_states"
        android:src="@drawable/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/ClearButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_states"
        android:drawableStart="@drawable/clear_states"
        android:drawablePadding="@dimen/bootstrap_alert_paddings"
        android:enabled="false"
        android:fontFamily="@font/open_sans"
        android:text="@string/Clear"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@+id/SettingsButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <!--Setup directions-->

    <TextView
        android:id="@+id/IDSetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/futura_medium_condensed_bt"
        android:text="@string/SetupTitle"
        android:textColor="@drawable/text_header_states"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/IDSetupDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_italic"
        android:text="@string/SetupDirections"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/instruction_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IDSetup" />

    <!--Scouter Name, Team alliance, alliance partners-->

    <TextView
        android:id="@+id/IDScouterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/ScouterNameID"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/input_label_text_size"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/IDSetupDirections"
        app:layout_constraintTop_toBottomOf="@+id/IDSetupDirections" />

    <EditText
        android:id="@+id/ScouterNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/HINT_NAME"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:tag="ScouterName"
        android:textColor="@color/charcoal"
        app:layout_constraintStart_toStartOf="@+id/IDScouterName"
        app:layout_constraintTop_toBottomOf="@+id/IDScouterName" />

    <TextView
        android:id="@+id/IDMatchNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/MatchNumberID"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/input_label_text_size"
        app:layout_constraintStart_toStartOf="@+id/ScouterNameInput"
        app:layout_constraintTop_toBottomOf="@+id/ScouterNameInput" />

    <EditText
        android:id="@+id/MatchNumberInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/HINT_MATCH_NUMBER"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:tag="MatchNumber"
        android:textColor="@color/charcoal"
        app:layout_constraintStart_toStartOf="@+id/IDMatchNumber"
        app:layout_constraintTop_toBottomOf="@+id/IDMatchNumber" />

    <TextView
        android:id="@+id/IDTeamNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/TeamNumberID"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/input_label_text_size"
        app:layout_constraintStart_toStartOf="@+id/MatchNumberInput"
        app:layout_constraintTop_toBottomOf="@+id/MatchNumberInput" />

    <EditText
        android:id="@+id/TeamNumberInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/HINT_TEAM_NUMBER"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="5"
        android:tag="TeamNumber"
        android:textColor="@color/charcoal"
        app:layout_constraintStart_toStartOf="@+id/IDTeamNumber"
        app:layout_constraintTop_toBottomOf="@+id/IDTeamNumber" />

    <!--Alliance Partners-->
    <TextView
        android:id="@+id/IDAlliancePartners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="408dp"
        android:layout_marginTop="50dp"
        android:text="@string/AlliancePartnersID"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/input_label_text_size"
        app:layout_constraintStart_toStartOf="@+id/IDSetupDirections"
        app:layout_constraintTop_toBottomOf="@+id/IDSetupDirections" />

    <EditText
        android:id="@+id/FirstAlliancePartnerInput"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/HINT_TEAM_NUMBER"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="5"
        android:nextFocusDown="@+id/SecondAlliancePartnerInput"
        android:tag="Alliance1"
        android:textColor="@color/charcoal"
        app:layout_constraintStart_toStartOf="@+id/IDAlliancePartners"
        app:layout_constraintTop_toBottomOf="@+id/IDAlliancePartners" />

    <EditText
        android:id="@+id/SecondAlliancePartnerInput"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/HINT_TEAM_NUMBER"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="5"
        android:tag="Alliance2"
        android:textColor="@color/charcoal"
        app:layout_constraintStart_toEndOf="@+id/FirstAlliancePartnerInput"
        app:layout_constraintTop_toBottomOf="@+id/IDAlliancePartners" />

    <!--Alliance Color Section-->
    <TextView
        android:id="@+id/IDAllianceColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/AllianceColorID"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/input_label_text_size"
        app:layout_constraintStart_toStartOf="@+id/IDAlliancePartners"
        app:layout_constraintTop_toBottomOf="@+id/FirstAlliancePartnerInput" />

    <!--Fix the layout of the boxed-->
    <RadioGroup
        android:id="@+id/MissedToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:divider="?android:attr/dividerHorizontal"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintStart_toStartOf="@+id/IDAllianceColor"
        app:layout_constraintTop_toBottomOf="@+id/IDAllianceColor">

        <Button
            android:id="@+id/BlueButton"
            android:layout_width="@dimen/alliance_color_width"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/toggle_blue_states"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/Blue"
            android:textColor="@drawable/text_states"
            android:textSize="@dimen/button_text_size"
            tools:visibility="visible" />

        <Button
            android:id="@+id/RedButton"
            android:layout_width="@dimen/alliance_color_width"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/toggle_red_states"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/Red"
            android:textColor="@drawable/text_states"
            android:textSize="@dimen/button_text_size"
            tools:visibility="visible" />
    </RadioGroup>

    <TextView
        android:id="@+id/IDToggleInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/open_sans_italic"
        android:text="@string/ToggleInstructions"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/instruction_text_size"
        app:layout_constraintStart_toStartOf="@+id/IDAllianceColor"
        app:layout_constraintTop_toBottomOf="@+id/MissedToggle" />

    <!--Prelead-->

    <!-- Preloaded Cargo Counter Layout -->
    <ImageButton
        android:id="@+id/PreloadedCargoMinus"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:background="@drawable/button_states"
        android:scaleType="centerInside"
        android:src="@drawable/minus_states"
        app:layout_constraintStart_toStartOf="@+id/IDToggleInstructions"
        app:layout_constraintTop_toBottomOf="@+id/IDToggleInstructions" />

    <TextView
        android:id="@+id/PreloadedCargoDisplay"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_rounded_corners"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="000"
        android:textColor="@color/charcoal"
        android:textSize="@dimen/input_label_text_size"
        app:layout_constraintStart_toEndOf="@+id/PreloadedCargoMinus"
        app:layout_constraintTop_toBottomOf="@+id/IDToggleInstructions" />

    <ImageButton
        android:id="@+id/PreloadedCargoPlus"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_states"
        android:scaleType="centerInside"
        android:src="@drawable/plus_states"
        app:layout_constraintStart_toEndOf="@+id/PreloadedCargoDisplay"
        app:layout_constraintTop_toBottomOf="@+id/IDToggleInstructions" />

    <TextView
        android:id="@+id/IDPreloadNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/PreloadNote"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/input_label_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/PreloadedCargoDisplay"
        app:layout_constraintStart_toEndOf="@+id/PreloadedCargoDisplay"
        app:layout_constraintTop_toTopOf="@+id/PreloadedCargoDisplay"
        app:layout_constraintVertical_bias="0.5" />

    <!--No Show Switch-->
    <Switch
        android:id="@+id/NoShowSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:thumb="@drawable/thumb_states"
        android:track="@drawable/track_states"
        app:layout_constraintStart_toStartOf="@+id/PreloadedCargoMinus"
        app:layout_constraintTop_toBottomOf="@+id/PreloadedCargoMinus" />

    <TextView
        android:id="@+id/IDNoShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/NoShow"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/input_label_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/NoShowSwitch"
        app:layout_constraintStart_toEndOf="@+id/NoShowSwitch"
        app:layout_constraintTop_toTopOf="@+id/NoShowSwitch"
        app:layout_constraintVertical_bias="0.5" />


    <!--Start Button-->
    <TextView
        android:id="@+id/IDStartDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/start_directions"
        android:drawableStart="@drawable/start_directions_symbol_states"
        android:enabled="true"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/StartButtonDirections"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/input_label_text_size"
        app:layout_constraintBottom_toTopOf="@+id/StartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/StartButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_start_states"
        android:drawableEnd="@drawable/start_button_symbol_states"
        android:enabled="false"
        android:fontFamily="@font/open_sans"
        android:paddingLeft="234dp"
        android:paddingRight="234dp"
        android:text="@string/Start"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
